<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name" translatable="false">Xapp3</string>
    <string name="sign_in_hint_phone_number">"Phone number"</string>
    <string name="sign_in_button_text">"Sign in"</string>
    <string name="sign_in_text_view">"Please insert your mobile number.The activation code will be sent to you via sms."</string>
    <string name="sign_up_text_view">"Please insert your name and mobile number for registry.The activation code will be sent to you via sms."</string>
    <string name="sign_up_button_text">"Sign up"</string>
    <string name="sign_up_hint_your_name">"Your name"</string>
    <string name="activation_hint_text_input">"Verify Code"</string>
    <string name="activation_text_view">"Please insert your Verify Code."</string>
    <string name="activation_button_text">"Verify"</string>
</resources>
